# ChatServer

./: CMakeLists.txt  Makefile
include/: client.h  config.h  server.h
src/: client.c  config.c  main.c  server.c
test/: test_client.cpp  test_server.cpp
